--- a/crud/blog/templates/edit.html
+++ b/crud/blog/templates/edit.html
@@ -6,7 +6,7 @@
 <br>
 
 
-<form class="form" action = "{% url 'update' blog.id %}" method = "post">
+<form class="form" action ="{% url 'update' blog.id %}" method = "POST">
     {% csrf_token %} 
 
     
