--- a/crud/blog/static/blog/css/input.css
+++ b/crud/blog/static/blog/css/input.css
@@ -14,6 +14,7 @@
     gap: 24px;
 }
 
+
 .textForm {
     position: relative;
     height: 60px;
@@ -118,4 +119,13 @@
 .submitBtn:hover {
     background-color: hotpink;
     color: white;
+}
+
+.main_form{
+    all: unset;
+    background-color: aquamarine;
+}
+
+.main_form >p{
+    all: unset;
 }
