--- a/crud/blog/templates/base.html
+++ b/crud/blog/templates/base.html
@@ -76,8 +76,8 @@
               >
             </li>
             <li class="nav-item mx-0 mx-lg-1">
-              <a class="nav-link py-3 px-0 px-lg-3 rounded" href="#contact"
-                >일기장 주인 만나러가기</a
+              <a class="nav-link py-3 px-0 px-lg-3 rounded" href="{% url 'hashtag' %}"
+                >해시태그 추가하기</a
               >
             </li>
           </ul>
