--- a/crud/blog/templates/edit.html
+++ b/crud/blog/templates/edit.html
@@ -30,7 +30,13 @@
         <span class="spanOverlay"></span>
         <span class="spanBase"></span>
     </div>
-
+    
+    <div class="textForm">
+        <input type="text" required class="textInput" name="hashtags" id="hashtags">
+        <label class="textLabel" for="hashtags">해시태그</label>
+        <span class="spanOverlay"></span>
+        <span class="spanBase"></span>
+    </div>
 
     <button type="submit" class="submitBtn">저장</button>
 </form>
