--- a/crud/blog/templates/base.html
+++ b/crud/blog/templates/base.html
@@ -73,18 +73,26 @@
         <div class="collapse navbar-collapse" id="navbarResponsive">
           <ul class="navbar-nav ms-auto">
             <li class="nav-item mx-0 mx-lg-1">
-              <a
-                class="nav-link py-3 px-0 px-lg-3 rounded"
-                href="{% url 'write' %}"
-
-                >일기 작성하기</a
-              >
+              <a class="nav-link py-3 px-0 px-lg-3 rounded" href="{% url 'write' %}">일기 작성하기</a>
             </li>
             <li class="nav-item mx-0 mx-lg-1">
-              <a class="nav-link py-3 px-0 px-lg-3 rounded" href="{% url 'hashtag' %}"
-                >해시태그 추가하기</a
-              >
+              <a class="nav-link py-3 px-0 px-lg-3 rounded" href="{% url 'hashtag' %}">해시태그 추가하기</a>
             </li>
+            {% if user.is_active %}
+            <li class="nav-item mx-0 mx-lg-1">
+              <a class="nav-link py-3 px-0 px-lg-3 rounded" href="{% url 'logout' %}">로그아웃</a>
+            </li>
+            <li class="nav-item mx-0 mx-lg-1">
+              <a class="nav-link py-3 px-0 px-lg-3 rounded">{{ user.username }}님 안녕하세요.</a>
+            </li>
+            {% else %} 
+            <li class="nav-item mx-0 mx-lg-1">
+              <a class="nav-link py-3 px-0 px-lg-3 rounded" href="{% url 'login' %}">로그인</a>
+            </li>
+            <li class="nav-item mx-0 mx-lg-1">
+              <a class="nav-link py-3 px-0 px-lg-3 rounded" href="{% url 'signup' %}">회원 가입</a>
+            </li>
+            {% endif %}
           </ul>
         </div>
       </div>
