--- a/crud/blog/static/blog/css/input.css
+++ b/crud/blog/static/blog/css/input.css
@@ -3,8 +3,8 @@
 }
 
 .form {
-    width: 100px;
-    height: 100px;
+    width: 100vw;
+    height: 100vh;
 
     display: flex;
     flex-direction: column;
@@ -16,8 +16,8 @@
 
 
 .textForm {
-    position: absolute;
-    height: 200px;
+    position: relative;
+    height: 60px;
     width: 500px;
 }
 
@@ -37,7 +37,6 @@
     width: 100%;
     height: 100%;
 }
-
 
 .textInput:valid ~ .spanBase,
 .textInput:focus ~ .spanBase {
@@ -135,7 +134,7 @@
     all: unset;
     width: 90px;
     height: 35px;
-    border-radius: 12px;
+    border-radius: 10px;
     text-align: center;
     background-color: pink;
 
