--- a/crud/blog/templates/account/login.html
+++ b/crud/blog/templates/account/login.html
@@ -2,7 +2,7 @@
 {% load static %}
 
 {% block posts %}
-    <form method="post" action="{% url 'login' %}">
+    <form method="post" class="idpwForm" action="{% url 'login' %}">
         {% csrf_token %}
         <br>
         <div class="textForm">
